services page overflowing text fix

--- a/wp-content/themes/starting-theme/sass/pages/_page-services.scss
+++ b/wp-content/themes/starting-theme/sass/pages/_page-services.scss
@@ -59,7 +59,15 @@
 
 .servicebox {
   margin-bottom: 20px;
+  a {
+    font-weight: 700;
+    transition: .5s;
+  }
+  a:hover {
+    text-decoration: none;
+  }
   .vert-align {
+    @include xl {
       position: absolute;
       top: 50%;
       right: 0;
@@ -69,6 +77,7 @@
       -ms-transform: translateY(-50%);
       -o-transform: translateY(-50%);
       transform: translateY(-50%);
+    }
   }
   .row {
   background: #c6cbcd;
@@ -93,6 +102,10 @@
   .servicecontentheight {
     position: relative;
     min-height: 350px;
+    padding: 20px 0;
+  }
+  .servicecontentheight:last-of-type {
+    padding: 0;
   }
 }
 
